<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/app_name"
        android:textSize="56sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etUsername"
        android:hint="@string/username"
        android:inputType="text"
        android:layout_marginBottom="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etPassword"
        android:hint="@string/master_password"
        android:inputType="textPassword"
        android:layout_marginBottom="28dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:layout_marginBottom="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnRegister"
        android:text="@string/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>